fixed innerthml problem c:

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body>
+  <body class="container">
     
           <p>PokeCHUY</p>
         </div>
@@ -25,7 +25,7 @@
               </label>
             </li>
           </ul>
-          <div>
+          <div class="search-section">
             <input id="filter-search" type="search" placeholder="Type here">
           </div>
         </div>
@@ -77,7 +77,7 @@
             <option value="Z-A">Z-A</option>
           </select>
         </section>
-        <section></section>
+        <section class="content center"></section>
 
       </main>
     </section>
