tests are passed and updated

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <li >Filter by type </li>
           </label>
           <section class="sub-menu hide-f">
-            <select id = 'filter-by-type'>
+            <select id ="filter-by-type">
               <option>Default</option>
               <option id="ghost">Ghost</option>
               <option id="psychic">Psychic</option>
