--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="container">
-          <p>PokeCHUY</p>
+          <p id="hi">PokeCHUY</p>
       <nav >
         <div>
           <ul>
@@ -69,7 +69,7 @@
         </section>
         <section class="content center"></section>
         <div id="modal"></div> 
-
+        <p id="kanto">Kanto</p>
         <div class="go-top-container">
           <span></span>
         </div>
