--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body class="container">
-          <header>PokeCHUY</header>
+    <a id="pokechuy" href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/230108/2501b4602c8cb4e29989aa5b2b34e269.png" alt="pokemon-font" border="0"></a>
+          <!-- <header>PokeCHUY</header> -->
       <nav >
         <h1>Home</h1>
           <div class="search-section">
@@ -77,3 +78,5 @@
     <script src="main.js" type="module"></script>
   </body>
 </html>
+
+
