--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
         <h1>Home</h1>
           <div class="search-section">
             <label for="filter-search">Search by name</label><br>
+            <div class="search-button">
             <input id="filter-search" type="search" placeholder="Type here">
+          </div>
           </div>
         </div>
       </nav>
@@ -55,9 +57,10 @@
             </select>
           </section>
       </aside>
-     
+
+      <a href="https://fontmeme.com/glow-effect/"><img src="https://fontmeme.com/permalink/230108/1a5cd22cd7b795bd9339c66c53f2d8ac.png" alt="glow-effect" border="0"></a>
+      <!-- <p id="kanto">Kanto</p> -->
       <main class="center"> 
-      
         <!-- <section class="sort-container">
           <p>Sort</p>
           <select id="selection" value ="Sort">
@@ -68,7 +71,6 @@
         </section> -->
         <section class="content center"></section>
         <div id="modal"></div> 
-        <p id="kanto">Kanto</p>
         <div class="go-top-container">
           <span></span>
         </div>
