changes on js and html

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="container">
-    <a id="pokechuy" href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/230108/2501b4602c8cb4e29989aa5b2b34e269.png" alt="pokemon-font" border="0"></a>
+    <a id="welcomeImg" href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/230108/2501b4602c8cb4e29989aa5b2b34e269.png" alt="pokemon-font" border="0"></a>
           <!-- <header>PokeCHUY</header> -->
       <nav >
         <h1>Home</h1>
@@ -24,28 +24,23 @@
       </nav>
     <section class="general-container">
       <aside class="hide-f ">
-          <label for="filter-by-type">Filter by type </label>
+          <label for="filter-by-type">Filter by species </label>
           <section class="sub-menu hide-f">
             <select id="filter-by-type" value="type">
               <option>Default</option>
-              <option value="ghost" id="ghost">Ghost</option>
-              <option value="psychic "id="psychic">Psychic</option>
-              <option value="Normal" id="normal">Normal</option>
-              <option value="fighting" id="fighting">Fighting</option>
-              <option value="poison" id="poison">Poison</option>
-              <option value="bug" id="bug">Bug</option>
-              <option value="flying" id="flying">Flying</option>
-              <option value="dark" id="dark">Dark</option>
-              <option value="fairy" id="fairy">Fairy</option>
-              <option value="water" id="water">Water</option>
-              <option value="fire" id="fire">Fire</option>
-              <option value="grass"id="grass">Grass</option>
-              <option value="ground" id="ground">Ground</option>
-              <option value="rock" id="rock">Rock</option>
-              <option value="steel" id="steel">Steel</option>
-              <option value="ice" id="ice">Ice</option>
-              <option value="electric"id="electric">Electric</option>
-              <option value="dragon"id="dragon">Dragon</option>
+              <option value="human" id="human">Human</option>
+              <option value="alien"id="alien">Alien</option>
+              <option value="humnoid" id="humnoid">Humanoid</option>
+              <option value="unknown" id="unknown">Unknown</option>
+              <option value="poopybutthole" id="poopybutthole">Poopybutthole</option>
+              <option value="mytholog" id="mytholog">Mytholog</option>
+              <option value="animal" id="animal">Animal</option>
+              <option value="vampire" id="vampire">Vampire</option>
+              <option value="robot" id="robot">Robot</option>
+              <option value="cronenberg" id="cronenberg">Cronenberg</option>
+              <option value="disease" id="disease">Disease</option>
+              <option value="parasite"id="parasite">Parasite</option>
+              
             </select>
           </section> 
           <label for="selection">Sort</label>
@@ -82,5 +77,6 @@
     <script src="main.js" type="module"></script>
   </body>
 </html>
+
 
 
