--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
   </head>
 
   <body class="container">
-    <a id="welcomeImg" href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/230108/2501b4602c8cb4e29989aa5b2b34e269.png" alt="pokemon-font" border="0"></a>
-          <!-- <header>PokeCHUY</header> -->
+    <a href="https://fontmeme.com/es/efecto-sombra/"><img src="https://fontmeme.com/permalink/230124/f91e0281c6a7e91bef76c500a369c86b.png" alt="efecto-sombra" border="0"></a>
       <nav >
         <h1>Home</h1>
           <div class="search-section">
