search button changes

--- a/src/index.html
+++ b/src/index.html
@@ -60,11 +60,11 @@
       <div class="section-title">
         <h2>CHARACTERS</h2>
 
-        <div class="seccion-botones">
+        <!-- <div class="seccion-botones">
           <div class="search">
             <h3>Search</h3>
             <input id="buscar" type="text" placeholder="Search your character!">
-          </div>
+          </div> -->
 
           <div class="filter-data">
             <h3>Order the characters</h3>
