--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/da6daf1276.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
-
+<!-- agregar bienvenida -->
 <body>
   <!--Inicio menu-->
   <div id="container-mobile">
